IDEA-387416 [java]: cleanup
GitOrigin-RevId: ecdd253c27f8e73149ff3df0c45cba7df29b3967